# oooopszi

ООПСЗИ Грибов Николай/: CMakeLists.txt
ООПСЗИ Грибов Николай/OOPZI_task1/: CMakeLists.txt
ООПСЗИ Грибов Николай/OOPZI_task1/OOPZI_task1/: CMakeLists.txt
ООПСЗИ Грибов Николай/OOPZI_task1/OOPZI_task1/task1/: CMakeLists.txt
ООПСЗИ Грибов Николай/OOPZI_task1/OOPZI_task1/task1/exe/: CMakeLists.txt  task1.c
ООПСЗИ Грибов Николай/OOPZI_task1/OOPZI_task1/task2/: CMakeLists.txt
ООПСЗИ Грибов Николай/OOPZI_task1/OOPZI_task1/task2/exe/: CMakeLists.txt  Task2_e.c
ООПСЗИ Грибов Николай/OOPZI_task1/OOPZI_task1/task3/exe/: CMakeLists.txt  Task3.c
ООПСЗИ Грибов Николай/OOPZI_task1/OOPZI_task1/task4/exe/: CMakeLists.txt  task4.c
ООПСЗИ Грибов Николай/OOPZI_task1/OOPZI_task1/task5/: CMakeLists.txt
ООПСЗИ Грибов Николай/OOPZI_task1/OOPZI_task1/task5/exe/: CMakeLists.txt  Task5_main.c
ООПСЗИ Грибов Николай/OOPZI_task1/OOPZI_task1/task5/header/: head.h
ООПСЗИ Грибов Николай/OOPZI_task1/OOPZI_task1/task5/lib/: CMakeLists.txt  Task5_func.c
ООПСЗИ Грибов Николай/OOPZI_task1/OOPZI_task1/task6/: CMakeLists.txt
ООПСЗИ Грибов Николай/OOPZI_task1/OOPZI_task1/task6/exe/: CMakeLists.txt  Task6_main.c
ООПСЗИ Грибов Николай/OOPZI_task1/OOPZI_task1/task6/header/: head.h
ООПСЗИ Грибов Николай/OOPZI_task1/OOPZI_task1/task6/lib/: CMakeLists.txt  Task6_func.c
ООПСЗИ Грибов Николай/OOPZI_task1/OOPZI_task1/task7/: CMakeLists.txt
ООПСЗИ Грибов Николай/OOPZI_task1/OOPZI_task1/task7/exe/: CMakeLists.txt  Task7_main.c
ООПСЗИ Грибов Николай/OOPZI_task1/OOPZI_task1/task7/header/: head.h
ООПСЗИ Грибов Николай/OOPZI_task1/OOPZI_task1/task7/lib/: CMakeLists.txt  Task7_func.c
ООПСЗИ Грибов Николай/OOPZI_task2/: CMakeLists.txt
ООПСЗИ Грибов Николай/OOPZI_task2/OOPZI_task2/exe/: CMakeLists.txt  main1.c
ООПСЗИ Грибов Николай/OOPZI_task2/OOPZI_task2/header/: head.h
ООПСЗИ Грибов Николай/OOPZI_task2/OOPZI_task2/lib/: CMakeLists.txt  Func_p_1.c  Func_p_2.c
ООПСЗИ Грибов Николай/OOPZI_task3/: CMakeLists.txt
ООПСЗИ Грибов Николай/OOPZI_task3/OOPZI_task3/: CMakeLists.txt
ООПСЗИ Грибов Николай/OOPZI_task3/OOPZI_task3/DO_WHILE/exe/: CMakeLists.txt
ООПСЗИ Грибов Николай/OOPZI_task3/OOPZI_task3/DO_WHILE/lib/: CMakeLists.txt  task1.c  task2.c  task3.c  task4.c  task5.c
ООПСЗИ Грибов Николай/OOPZI_task3/OOPZI_task3/FOR/exe/: CMakeLists.txt  MAIN.c
ООПСЗИ Грибов Николай/OOPZI_task3/OOPZI_task3/FOR/header/: head.h
ООПСЗИ Грибов Николай/OOPZI_task3/OOPZI_task3/FOR/lib/: CMakeLists.txt  task1.c  task2.c  task3.c  task4.c  task5.c
ООПСЗИ Грибов Николай/OOPZI_task3/OOPZI_task3/WHILE/: CMakeLists.txt
ООПСЗИ Грибов Николай/OOPZI_task3/OOPZI_task3/WHILE/exe/: CMakeLists.txt
ООПСЗИ Грибов Николай/OOPZI_task3/OOPZI_task3/WHILE/lib/: CMakeLists.txt  task1.c  task2.c  task3.c  task4.c  task5.c
ООПСЗИ Грибов Николай/OOPZI_task4/: CMakeLists.txt
ООПСЗИ Грибов Николай/OOPZI_task4/exe/: CMakeLists.txt  main_f.cpp
ООПСЗИ Грибов Николай/OOPZI_task4/header/: head.h
ООПСЗИ Грибов Николай/OOPZI_task4/lib/: CMakeLists.txt  Complex_class.cpp
ООПСЗИ Грибов Николай/OOPZI_task5/: CMakeLists.txt
ООПСЗИ Грибов Николай/OOPZI_task5/exe/: CMakeLists.txt  task_main.cpp
ООПСЗИ Грибов Николай/OOPZI_task5/header/: head.h
ООПСЗИ Грибов Николай/OOPZI_task5/lib/: CMakeLists.txt  task_abstract_data_v_2.cpp  task_int_data.cpp
ООПСЗИ Грибов Николай/OOPZI_task6/: CMakeLists.txt
ООПСЗИ Грибов Николай/OOPZI_task6/exe/: CMakeLists.txt  task_main.cpp
ООПСЗИ Грибов Николай/OOPZI_task6/header/: head.h
ООПСЗИ Грибов Николай/OOPZI_task6/lib/: CMakeLists.txt  task_abstract_data_v_2.cpp
