# CMakeList.txt: файл проекта CMake верхнего уровн€; проведите глобальную конфигурацию
# и включите сюда подпроекты.
#
cmake_minimum_required (VERSION 3.8)

project ("Main_OOPZI_v_2")

# ¬ключите подпроекты.
add_subdirectory ("OOPZI_task1")
add_subdirectory ("OOPZI_task2")
add_subdirectory ("OOPZI_task3")
add_subdirectory ("OOPZI_task4")
add_subdirectory ("OOPZI_task5")
add_subdirectory ("OOPZI_task6")