# CMakeList.txt: проект CMake для OOPZI_task2; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#

# Добавьте источник в исполняемый файл этого проекта.
add_executable (exe_t2 "main1.c")
target_link_libraries(exe_t2 tlibt2)
# TODO: Добавьте тесты и целевые объекты, если это необходимо.
